feat: API Key 추가 및 은닉

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# APIKey
-Diary/APIKey.plist
+# API Key
+Camera-Translate-App/Camera-Translate-App/*.xcconfig
 
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,macos,linux,windows,sublimetext,swift,swiftpackagemanager,swiftpm,objective-c
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,macos,linux,windows,sublimetext,swift,swiftpackagemanager,swiftpm,objective-c
